Shift card background top by -12px to resolve top margin gap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -213,10 +213,10 @@ body {
 .p-profile::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: -12px;
   left: 0;
   width: 100%;
-  height: 450px;
+  height: 462px;
   background-image: url('/assets/mountain_bg.png');
   background-size: cover;
   background-position: top center;
